# 3PU

./: .gitignore  .gitmodules  activate_cuda_90.sh  deactivate_cuda_90.sh  environment.yml  readme.md
code/: curriculum_data_provider.py  curriculumn_record_provider.py  dense_interlevelplus.py  evaluate.py  main_curriculum_interleave.py  mixed_data_provider.py  model_utils.py
code/tf_ops/CD/: makefile  tf_nndistance.py  tf_nndistance_compile.sh
code/tf_ops/grouping/: query_ball_point.cu  test_knn.py  tf_grouping.cpp  tf_grouping.py  tf_grouping_compile.sh  tf_grouping_g.cu  tf_grouping_op_test.py
code/tf_ops/sampling/: tf_sampling.cpp  tf_sampling.py  tf_sampling_compile.sh
code/utils/: misc.py  tf_util.py
evaluation_code/: evaluation.cpp  nuc.cpp  run_evaluate.py
prepare_data/: CMakeLists.txt  create_tfrecords.py  xyz_to_ply.py
prepare_data/Poisson_reconstruction/: invert_orientation.mlx  meshlab_poisson_reconstruction.mlx  run_reconstruction.sh
prepare_data/Poisson_sample/: CMakeLists.txt  Source.cpp  run_pd_sampling.sh
prepare_data/polygonmesh_base/: Camera.cpp  Camera.h  DataMgr.cpp  DataMgr.h  Parameter.h  ParameterMgr.cpp  ParameterMgr.h  PointCloudAlgorithm.h  grid.cpp  grid.h  run_scan.sh
prepare_data/virtual_scanner/: CMakeLists.txt  CMesh.h  GlobalFunction.cpp  GlobalFunction.h  Parameter.cpp  polygonmesh.cpp  sphere_view_points_1k_perspective_700_wlop_ordered_cut2.ply
